--- a/src/Randevu.Mvc/Randevu.Mvc.csproj
+++ b/src/Randevu.Mvc/Randevu.Mvc.csproj
@@ -33,6 +33,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ninject">
+      <HintPath>..\..\libs\Ninject-2.0.0.0-release-mono-2.0\Ninject.dll</HintPath>
+    </Reference>
+    <Reference Include="Ninject.Web.Mvc">
+      <HintPath>..\..\libs\Ninject.Web.Mvc-2\release\Ninject.Web.Mvc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -66,6 +72,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandevuNinjectModule.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
