--- a/src/Randevu.Mvc/Randevu.Mvc.csproj
+++ b/src/Randevu.Mvc/Randevu.Mvc.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="dotless.Core">
+      <HintPath>..\..\libs\dotless-v1.0.0.5-135-g39098e4\dotless.Core.dll</HintPath>
+    </Reference>
     <Reference Include="Ninject">
       <HintPath>..\..\libs\Ninject-2.0.0.0-release-mono-2.0\Ninject.dll</HintPath>
     </Reference>
