--- a/src/Randevu.Mvc/Randevu.Mvc.csproj
+++ b/src/Randevu.Mvc/Randevu.Mvc.csproj
@@ -100,6 +100,7 @@
     <Content Include="Views\Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Data\" />
     <Folder Include="Controllers\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Shared\" />
