+ seperate appsettings.config file

--- a/src/Randevu.Mvc/Web.config
+++ b/src/Randevu.Mvc/Web.config
@@ -27,7 +27,7 @@
 
     <dotless minifyCss="true" cache="false" />
 
-    <appSettings/>
+    <appSettings configSource="AppSettings.config"/>
 
     <connectionStrings configSource="ConnectionStrings.config"/>
 
