--- a/src/Randevu.Mvc/Randevu.Mvc.csproj
+++ b/src/Randevu.Mvc/Randevu.Mvc.csproj
@@ -85,6 +85,11 @@
     </Content>
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Skins\Default\images\apply.png" />
+    <Content Include="Skins\Default\images\cross.png" />
+    <Content Include="Skins\Default\preview.htm" />
+    <Content Include="Skins\Default\reset-min.css" />
+    <Content Include="Skins\Default\site.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
